Fixing overflow bug

--- a/styles/style.css
+++ b/styles/style.css
@@ -771,6 +771,7 @@ body {
   height: 100%;
   height: 100vh;
   max-width: 768px;
+  overflow: hidden;
   position: relative;
   width: 100%;
 }
